Add related posts plugin and config

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,17 @@ layout: default
     {{ content | toc }}
   </div>
 
+  {% if site.related_posts.size >= 1 %}
+  <div>
+    <h3>Related Posts</h3>
+    <ul>
+    {% for related_post in site.related_posts limit: 10 %}
+      <li><a href="{{ related_post.url }}">{{ related_post.title }}</a></li>
+    {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
