--- a/_includes/categories_menu.html
+++ b/_includes/categories_menu.html
@@ -7,3 +7,12 @@
   {% endfor %}
 </ul>
 </div>
+<div class="categories-menu page-link">Tags
+<ul>
+    {% for tag in site.tags %}
+      <li>
+        <a href="{{site.url}}/tag/{{ tag | first }}">{{ tag | first }}</a>
+      </li>
+    {% endfor %}
+</ul>
+</div>
